[package]
name = "raijin-acp-tools"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"


[lints]
workspace = true

[lib]
path = "src/acp_tools.rs"
doctest = false

[dependencies]
agent-client-protocol.workspace = true
inazuma-collections.workspace = true
inazuma.workspace = true
raijin-language.workspace = true
raijin-markdown.workspace = true
raijin-project.workspace = true
serde.workspace = true
serde_json.workspace = true
inazuma-settings-framework.workspace = true
raijin-theme-settings.workspace = true
raijin-ui.workspace = true
inazuma-util.workspace = true
raijin-workspace.workspace = true
