[package]
name = "raijin-action-log"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lib]
path = "src/action_log.rs"

[lints]
workspace = true

[features]
test-support = []

[dependencies]
anyhow.workspace = true
raijin-buffer-diff.workspace = true
log.workspace = true
inazuma-clock.workspace = true
inazuma-collections.workspace = true
raijin-fs.workspace = true
futures.workspace = true
inazuma.workspace = true
raijin-language.workspace = true
raijin-project.workspace = true
raijin-telemetry.workspace = true
inazuma-text.workspace = true
inazuma-util.workspace = true
raijin-watch.workspace = true


[dev-dependencies]
raijin-buffer-diff = { workspace = true, features = ["test-support"] }
inazuma-collections = { workspace = true, features = ["test-support"] }
inazuma-clock = { workspace = true, features = ["test-support"] }
ctor.workspace = true
inazuma = { workspace = true, features = ["test-support"] }

raijin-language = { workspace = true, features = ["test-support"] }
log.workspace = true
pretty_assertions.workspace = true
raijin-project = { workspace = true, features = ["test-support"] }
rand.workspace = true
serde_json.workspace = true
inazuma-settings-framework = { workspace = true, features = ["test-support"] }
inazuma-text = { workspace = true, features = ["test-support"] }
inazuma-util = { workspace = true, features = ["test-support"] }
raijin-log.workspace = true
