[package]
name = "raijin-activity-indicator"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/activity_indicator.rs"
doctest = false

[dependencies]
anyhow.workspace = true
raijin-auto-update.workspace = true
raijin-editor.workspace = true
raijin-extension-host.workspace = true
raijin-fs.workspace = true
futures.workspace = true
inazuma.workspace = true
raijin-language.workspace = true
raijin-project.workspace = true
raijin-proto.workspace = true
smallvec.workspace = true
raijin-ui.workspace = true
inazuma-util.workspace = true
raijin-workspace.workspace = true

[dev-dependencies]
raijin-editor = { workspace = true, features = ["test-support"] }

