[package]
name = "raijin-agent-settings"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/agent_settings.rs"

[dependencies]
agent-client-protocol.workspace = true
anyhow.workspace = true
inazuma-collections.workspace = true
convert_case.workspace = true
raijin-fs.workspace = true
inazuma.workspace = true
raijin-language-model.workspace = true
log.workspace = true
raijin-project.workspace = true
regex.workspace = true
schemars.workspace = true
serde.workspace = true
inazuma-settings-framework.workspace = true
inazuma-util.workspace = true

[dev-dependencies]
raijin-fs.workspace = true
inazuma = { workspace = true, features = ["test-support"] }

serde_json_lenient.workspace = true
serde_json.workspace = true
inazuma-settings-framework = { workspace = true, features = ["test-support"] }
