[package]
name = "raijin-agent-ui"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/agent_ui.rs"
doctest = false

[features]
test-support = [
    "raijin-assistant-text-thread/test-support",
    "raijin-acp-thread/test-support",
    "raijin-eval-utils",
    "inazuma/test-support",
    "raijin-language/test-support",
    "raijin-reqwest-client",
    "raijin-workspace/test-support",
    "raijin-agent/test-support",
]
unit-eval = []

[dependencies]
raijin-acp-thread.workspace = true
raijin-action-log.workspace = true
agent-client-protocol.workspace = true
raijin-agent.workspace = true
raijin-agent-servers.workspace = true
raijin-agent-settings.workspace = true
raijin-ai-onboarding.workspace = true
anyhow.workspace = true
heapless.workspace = true
raijin-assistant-text-thread.workspace = true
raijin-assistant-slash-command.workspace = true
raijin-assistant-slash-commands.workspace = true
raijin-audio.workspace = true
base64.workspace = true
raijin-buffer-diff.workspace = true
chrono.workspace = true
raijin-client.workspace = true
raijin-cloud-api-types.workspace = true
inazuma-collections.workspace = true
inazuma-component-registry.workspace = true
raijin-command-palette-hooks.workspace = true
raijin-context-server.workspace = true
raijin-db.workspace = true
raijin-editor.workspace = true
raijin-eval-utils = { workspace = true, optional = true }
raijin-extension.workspace = true
raijin-extension-host.workspace = true
raijin-feature-flags.workspace = true
raijin-file-icons.workspace = true
raijin-fs.workspace = true
futures.workspace = true
raijin-git.workspace = true
inazuma-fuzzy.workspace = true
inazuma.workspace = true
inazuma-tokio.workspace = true
raijin-html-to-markdown.workspace = true
raijin-http-client.workspace = true
indoc.workspace = true
itertools.workspace = true
jsonschema.workspace = true
raijin-language.workspace = true
raijin-language-model.workspace = true
raijin-language-models.workspace = true
log.workspace = true
raijin-lsp.workspace = true
raijin-markdown.workspace = true
inazuma-menu.workspace = true
raijin-multi-buffer.workspace = true
raijin-notifications.workspace = true
ordered-float.workspace = true
parking_lot.workspace = true
raijin-paths.workspace = true
inazuma-picker.workspace = true
postage.workspace = true
raijin-project.workspace = true
raijin-prompt-store.workspace = true
raijin-proto.workspace = true
rand.workspace = true
raijin-release-channel.workspace = true
inazuma-rope.workspace = true
raijin-rules-library.workspace = true
schemars.workspace = true
raijin-search.workspace = true
raijin-shell.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_json_lenient.workspace = true
inazuma-settings-framework.workspace = true
smol.workspace = true
raijin-streaming-diff.workspace = true
raijin-task.workspace = true
raijin-telemetry.workspace = true
raijin-terminal.workspace = true
raijin-terminal-view.workspace = true
inazuma-text.workspace = true
raijin-theme.workspace = true
raijin-theme-settings.workspace = true
time.workspace = true
raijin-time-format.workspace = true
raijin-ui.workspace = true
raijin-ui-input.workspace = true
url.workspace = true
inazuma-util.workspace = true
uuid.workspace = true
raijin-watch.workspace = true
raijin-workspace.workspace = true
raijin-actions.workspace = true
image.workspace = true
raijin-reqwest-client = { workspace = true, optional = true }

[dev-dependencies]
raijin-acp-thread = { workspace = true, features = ["test-support"] }
raijin-agent = { workspace = true, features = ["test-support"] }
raijin-assistant-text-thread = { workspace = true, features = ["test-support"] }
raijin-buffer-diff = { workspace = true, features = ["test-support"] }

raijin-db = { workspace = true, features = ["test-support"] }
raijin-editor = { workspace = true, features = ["test-support"] }
raijin-eval-utils.workspace = true
inazuma = { workspace = true, "features" = ["test-support"] }
indoc.workspace = true
raijin-language = { workspace = true, "features" = ["test-support"] }
raijin-languages = { workspace = true, features = ["test-support"] }
raijin-language-model = { workspace = true, "features" = ["test-support"] }
pretty_assertions.workspace = true
raijin-project = { workspace = true, features = ["test-support"] }

semver.workspace = true
raijin-reqwest-client.workspace = true

tree-sitter-md.workspace = true
unindent.workspace = true
