[package]
name = "raijin-ai-onboarding"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/ai_onboarding.rs"

[features]
default = []

[dependencies]
inazuma-component-registry.workspace = true
raijin-client.workspace = true
raijin-cloud-api-types.workspace = true
inazuma.workspace = true
raijin-language-model.workspace = true
serde.workspace = true
smallvec.workspace = true
raijin-telemetry.workspace = true
raijin-ui.workspace = true
raijin-actions.workspace = true
