[package]
name = "raijin-askpass"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/askpass.rs"

[dependencies]
anyhow.workspace = true
futures.workspace = true
inazuma.workspace = true
raijin-net.workspace = true
smol.workspace = true
log.workspace = true
tempfile.workspace = true
inazuma-util.workspace = true
zeroize.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true

[package.metadata.cargo-machete]
ignored = ["log"]
