[package]
name = "raijin-assistant-slash-command"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/assistant_slash_command.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
inazuma-collections.workspace = true
derive_more.workspace = true
raijin-extension.workspace = true
futures.workspace = true
inazuma.workspace = true
raijin-language.workspace = true
raijin-language-model.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
raijin-ui.workspace = true
inazuma-util.workspace = true
raijin-workspace.workspace = true

[dev-dependencies]
inazuma = { workspace = true, features = ["test-support"] }
pretty_assertions.workspace = true
raijin-workspace = { workspace = true, features = ["test-support"] }
